# 5GBaseChecker

./: README.md
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/cmake_targets/nas_sim_tools/: CMakeLists.txt
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/common/utils/: CMakeLists.txt  assertions.h  config.h  load_module_shlib.c  load_module_shlib.h  minimal_stub.c  oai_asn1.h  simple_executable.h  system.c  system.h  time_meas.c  time_meas.h  time_stat.c  time_stat.h  utils.c  utils.h  var_array.h
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/common/utils/DOC/: loader.md
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/common/utils/LOG/: log.c  log.h  log_extern.h  log_if.h  vcd_signal_dumper.c  vcd_signal_dumper.h
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/common/utils/T/: CMakeLists.txt  Makefile  README  T.c  T.h  T_defs.h  T_messages.txt  check_vcd.c  defs.h  generate_Txx.c  genids.c  local_tracer.c  plot.c
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/common/utils/collection/: linear_alloc.h
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/common/utils/ds/: CMakeLists.txt  byte_array.c  byte_array.h
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/common/utils/hashtable/: hashtable.c  hashtable.h  obj_hashtable.c  obj_hashtable.h
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/common/utils/lte/: prach_utils.c  prach_utils.h  ue_power.c
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/common/utils/nr/: nr_common.c  nr_common.h
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/common/utils/ocp_itti/: all_msg.h  intertask_interface.cpp  intertask_interface.h  itti.md
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/common/utils/telnetsrv/: CMakeLists.txt  telnetsrv.c  telnetsrv.h  telnetsrv_5Gue_measurements.c  telnetsrv_ci.c  telnetsrv_cpumeasur_def.h  telnetsrv_enb_measurements.c  telnetsrv_enb_phycmd.c  telnetsrv_loader.c  telnetsrv_loader.h  telnetsrv_ltemeasur_def.h  telnetsrv_measurements.c  telnetsrv_measurements.h  telnetsrv_phycmd.h  telnetsrv_proccmd.c  telnetsrv_proccmd.h
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/common/utils/threadPool/: Makefile  measurement_display.c  thread-pool.c  thread-pool.h  thread-pool.md
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/common/utils/websrv/: CMakeLists.txt  websrv.c  websrv.h  websrv_noforms.c  websrv_noforms.h  websrv_scope.c  websrv_utils.c  websrv_websockets.c
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/doc/: 5Gnas.md  BUILD.md  CMakeLists.txt  Doxyfile  E1-design.md  F1-design.md  FEATURE_SET.md  GET_SOURCES.md  L1SIM.md  L2NFAPI.md  L2NFAPI_NOS1.md  L2NFAPI_S1.md  NR_NFAPI_archi.md  NR_SA_Tutorial_COTS_UE.md  NR_SA_Tutorial_OAI_CN5G.md  NR_SA_Tutorial_OAI_nrUE.md  README.md  RUNMODEM.md  RUN_NR_NFAPI.md  RUN_NR_PRS.md  RUN_NR_multiple_BWPs.md  SW-archi-graph.md  SW_archi.md  SystemX-tutorial-design.md  TESTBenches.md  TESTING_GNB_W_COTS_UE.md  UL_MIMO.txt  clang-format.md  d2d_emulator_setup.txt  environment-variables.md  iqrecordplayer_usage.md  nr-ue-design.md
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/doc/episys/lte_mode_l2_emulator/: README.txt
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/doc/episys/nsa_mode_l2_emulator/: README.txt
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/doc/images/: e1-archi.tex
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/doc/testbenches_doc_resources/: 4g-faraday-bench.tex  5g-aw2s-bench.tex  5g-nrue-bench.tex  5g-nsa-faraday-bench.tex  5g-ota-bench.tex
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/doc/testing_gnb_w_cots_ue_resources/: enb.conf  gnb.conf  oai_fr1_setup.vsdx
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/doc/tutorial_resources/oai-cn5g/: Dockerfile  (+1 more)
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/nfapi/open-nFAPI/: .travis.yml  Makefile.am  README.md  configure.ac
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/openair1/PHY/: CMakeLists.txt  defs_L1_NB_IoT.h  defs_RU.h  defs_UE.h  defs_common.h  defs_eNB.h  defs_gNB.h  defs_nr_UE.h  defs_nr_common.h  impl_defs_lte_NB_IoT.h  impl_defs_nr.h  impl_defs_top.h  impl_defs_top_NB_IoT.h  phy_extern.h  phy_extern_nr_ue.h  phy_extern_ue.h  phy_vars.h  phy_vars_nr_ue.h  phy_vars_ue.h  sse_intrin.h  types.h  types_NB_IoT.h
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/openair2/E1AP/: CMakeLists.txt  e1ap.c  e1ap.h  e1ap_api.c  e1ap_api.h  e1ap_asnc.h  e1ap_common.c  e1ap_common.h  e1ap_default_values.h  e1ap_setup.c
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/openair2/E2AP/: CMakeLists.txt  README.md  e2_agent_arg.h
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/radio/: CMakeLists.txt
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/radio/AW2SORI/: CMakeLists.txt  oaiori.c  ori.h
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/radio/BLADERF/: CMakeLists.txt  README  bladerf_lib.c  bladerf_lib.h
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/radio/COMMON/: common_lib.c  common_lib.h  record_player.c  record_player.h
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/radio/ETHERNET/: CMakeLists.txt  eth_raw.c  eth_udp.c  ethernet.md  ethernet_lib.c  ethernet_lib.h  if_defs.h
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/radio/IRIS/: CMakeLists.txt  iris_lib.cpp
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/radio/LMSSDR/: CMakeLists.txt  LimeSDR.ini  LimeSDR_above_1p8GHz.ini  LimeSDR_above_1p8GHz_1v4.ini  LimeSDR_below_1p8GHz.ini  LimeSDR_below_1p8GHz_1v4.ini  lms_lib.cpp  sodera_lib.cpp
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/radio/USRP/: CMakeLists.txt  README.md  usrp_lib.cpp
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/radio/iqplayer/: iqplayer_lib.c
StateSynth/modified_cellular_stack/5GBaseChecker_OAI_gnb/radio/rfsimulator/: CMakeLists.txt  README.md  apply_channelmod.c  rfsimulator.h  simulator.c  stored_node.c
(+3368 files in other folders)
